[package]
name = "os"
version = "0.1.0"
authors = ["Qing Wang <wangqing7171@gmail.com>"]
edition = "2024"

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[profile.release]
debug = true