[package]
name = "os"
version = "0.1.0"
authors = ["Qing Wang <wangqing7171@gmail.com>"]
edition = "2024"

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.6.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }

[features]
board_qemu = []
board_k210 = []

[profile.release]
debug = true
